Border optimisation